name:                cation-client
version:             0.0.0.1
synopsis:            A full-stack Haskell web application template.
-- description:
homepage:            https://github.com/mbeidler/cation#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Beidler
maintainer:          michael.beidler@gmail.com
copyright:           2017 Michael Beidler
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cation.Client
                     , Cation.Client.Api
                     , Cation.Client.Components.Table
                     , Cation.Client.Components.Contacts.Store
                     , Cation.Client.Components.Contacts.View
                     , Cation.Client.GHCi
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , cation-common
                     , data-default
                     , deepseq
                     , ghcjs-base
                     , react-flux
                     , react-flux-servant
                     , servant
                     , text
                     , time
                     , vector
  default-language:    Haskell2010

executable cation-client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cation-client
  default-language:    Haskell2010

test-suite cation-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cation-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mbeidler/cation
