name:                cation-common
version:             0.0.0.1
synopsis:            A full-stack Haskell web application template.
-- description:
homepage:            https://github.com/mbeidler/cation#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Beidler
maintainer:          michael.beidler@gmail.com
copyright:           2017 Michael Beidler
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cation.Common
                     , Cation.Common.Conventions
                     , Cation.Common.Api
                     , Cation.Common.Api.Combinators
                     , Cation.Common.Api.Contacts
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , deepseq
                     , servant
                     , text
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mbeidler/cation
