name:                cation-server
version:             0.0.0.1
synopsis:            A full-stack Haskell web application template.
-- description:
homepage:            https://github.com/mbeidler/cation#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Beidler
maintainer:          michael.beidler@gmail.com
copyright:           2017 Michael Beidler
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cation.Server
                     , Cation.Server.Base
                     , Cation.Server.Db
                     , Cation.Server.Api.Contacts
                     , Cation.Server.Docs.Contacts
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , cation-common
                     , lens
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , safe
                     , servant-server
                     , servant-swagger
                     , swagger2
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable cation-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cation-server
  default-language:    Haskell2010

test-suite cation-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cation-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mbeidler/cation-server
